load("@rules_python//sphinxdocs:sphinx.bzl", "sphinx_build_binary", "sphinx_docs")
load("@rules_python//sphinxdocs:sphinx_docs_library.bzl", "sphinx_docs_library")

sphinx_docs_library(
    name = "sources",
    srcs = [
        "index.rst",
    ],
)

sphinx_build_binary(
    name = "sphinx",
    deps = [
        "@pypi//sphinx",
        "@pypi//sphinx_reredirects",
    ]
)

sphinx_docs(
    name = "docs",
    config = "conf.py",
    formats = [
        "html",
    ],
    sphinx = ":sphinx",
    deps = [
        ":sources",
    ]
)
